--- a/end.html
+++ b/end.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,15 @@
     <link rel="stylesheet" href="./css/end.css" />
     <title>Botostart | End</title>
 </head>
+
 <body>
+    <p></p>
+    <input type="text" placeholder="Enter username">
+    <button>Save</button>
+    <a href="/game.html">Play again</a>
+    <a href="/">Go home</a>
 
     <script src="./js/end.js"></script>
 </body>
+
 </html>
