--- a/game.html
+++ b/game.html
@@ -10,6 +10,29 @@
 </head>
 
 <body>
+  <span id="loader"></span>
+  <h4 id="error">Something went wrong | Please try again</h4>
+  <div id="container">
+    <div class="header">
+      <div>
+        <p>Question No:</p>
+        <span id="question-number">1</span>
+      </div>
+      <div>
+        <p>score:</p>
+        <span id="score">0</span>
+      </div>
+    </div>
+    <div id="question-box">
+      <h3 id="question-text"></h3>
+      <button class="answer-text"></button>
+      <button class="answer-text"></button>
+      <button class="answer-text"></button>
+      <button class="answer-text"></button>
+    </div>
+    <button id="finish-button">Finish</button>
+    <button id="next-button">Next</button>
+  </div>
 
   <script src="./js/game.js" type="module"></script>
   <script src="./js/helper.js" type="module"></script>
